# youle-mas

./: .gitignore  README.md  产品功能清单_v5.md
.claude/: settings.local.json
backend/: .env.example  README.md  _smoke_sse.py  pyproject.toml
backend/app/: config.py  errors.py  main.py  sse.py  utils.py
backend/app/adapters/: model_gateway.py  model_router.py
backend/app/adapters/storage/: artifact_store.py
backend/app/adapters/tools/: excel_reader.py  image_downloader.py  image_processor.py  placeholder_image.py  script_validator.py  silent_audio.py  subtitle_maker.py  thumbnail_maker.py  video_probe.py
backend/app/agents/: __init__.py  dispatcher.py  role_chat.py
backend/app/api/: routes.py  team_conduct_bridge.py
backend/app/capabilities/: __init__.py  doc.py  doc_tools.py  image.py  image_tools.py  text.py  text_tools.py  video.py  video_tools.py
backend/app/conductor/: __init__.py  clarify.py  dispatcher.py  intent.py  skill_retriever.py
backend/app/graph/: builder.py  reducers.py  runtime.py  streaming.py
backend/app/graph/nodes/: audio_agent.py  image_agent.py  orchestrator.py  text_agent.py  video_agent.py
backend/app/observability/: __init__.py  api.py  callback.py  trace_store.py
backend/app/schemas/: artifacts.py  dispatch.py  events.py  state.py
backend/app/skills/: __init__.py  registry.py
backend/app/skills/builtin/: __init__.py
backend/app/skills/builtin/anti_scam_video/: __init__.py  persistence.py  runner.py
backend/app/storage/: __init__.py  chat_store.py
backend/evals/: golden_cases.yaml
backend/scripts/: make_sample_input.py  run_evals.py  smoke_deepseek_env.py  smoke_gateway_deepseek_news.py  verify_anthropic.py  verify_deepseek.py
backend/skills/: anti_scam_video.yaml  brand_story.yaml  douyin_kouban_script.yaml  ecommerce_main_image.yaml  image_review.yaml  kol_brief.yaml  monthly_report_pptx.yaml  product_detail_copy.yaml  product_launch_bundle.yaml  weekly_marketing_report.yaml  xiaohongshu_hook_title.yaml
backend/tests/: test_api.py  test_artifacts.py  test_excel_reader.py  test_graph.py  test_health.py  test_integration.py  test_model_gateway.py  test_observability.py  test_security_hardening.py  test_settings_model_aliases.py  test_tts_fallback.py  test_v1_phase2_e2e.py  test_v1_phase3_e2e.py  test_v1_phase4_5_llm.py  test_v1_phase5_vision_skills_onepass.py  test_v1_skeleton.py  test_v4_audit_gaps.py
backend/vertical_prompts/: content.yaml  default.yaml  ecommerce.yaml  finance.yaml  marketing.yaml
docs/: developer-prompt-v4.md  master-prompt.md  skeleton.md  v1-architecture.md  v1-go-live.md  v1-llm-smoke.md  v1-vs-v0.md
frontend/: .env.example  .gitignore  .vercelignore  agent-specs.md  next.config.mjs  package.json  (+1 more)
youle-mvp/: .env.example  .gitignore  README.md  pyproject.toml
youle-mvp/app/: config.py  logging_config.py  main.py  prompts.py  utils.py
youle-mvp/app/adapters/: model_gateway.py
youle-mvp/app/adapters/storage/: artifact_store.py
youle-mvp/app/adapters/tools/: audio_normalizer.py  excel_reader.py  ffmpeg_composer.py  image_downloader.py  image_processor.py  local_bgm.py  music_generator.py  news_normalizer.py  og_image_extractor.py  placeholder_image.py  script_validator.py  silent_audio.py  thumbnail_maker.py  tts_client.py
youle-mvp/app/api/: routes.py
youle-mvp/app/graph/: reducers.py
youle-mvp/app/graph/nodes/: audio_agent.py  image_agent.py  orchestrator.py  text_agent.py
youle-mvp/app/schemas/: news.py  state.py
youle-mvp/scripts/: smoke_test.py
youle-mvp/tests/: test_api.py  test_graph.py  test_health.py  test_image_fallback.py  test_model_gateway.py  test_script_validator.py  test_sse_schema.py  test_video.py
(+47 files in other folders)
